--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.3.1",
