--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
+    "react-chatbot-kit": "^2.2.2",
     "tsx": "^4.7.0",
     "typescript": "^5.1.6"
   },
